--- a/design/default.css
+++ b/design/default.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0.4rem 1.3rem;
+}
+
 ul, ol {
   list-style-type: none;
 }
@@ -13,20 +17,103 @@ section#global-container {
 section#header {
   display: flex;
   flex-flow: row wrap;
-}
-
-section#header article {
-  padding: 0.4rem 1.5rem;
+  justify-content: space-between;
 }
 
 section#header article {
   display: flex;
+  flex-flow: column wrap;
+  flex: 1 125px;
+  margin: 0.2rem 0.8rem;
+  padding: 0.4rem 1.1rem;
+  border: thin solid darkgray;
+  border-radius: 0.7rem;
 }
 
 section#header article > header {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+
+/* section#header article > #view-details { WITHOUT ANY EFFECT
+  justify-content: space-between;
+} */
 
 section#primary-content {
   display: flex;
+}
+
+section#auxilliary-content > article {
+  border: thin solid darkgrey;
+  margin: 1.5rem 0;
+  border-radius: 0.7rem;
+}
+
+section#auxilliary-content > article > header {
+  text-align: center;
+  font-family: Nunito, sans-serif;
+  border-bottom: thin solid darkgrey;
+  background: linear-gradient(to top left, rgb(65, 161, 65),rgb(132, 233, 132));
+}
+
+article#bar-chart > .bar-chart-subparts {
+  display: flex;
+  padding: 0 2.5rem;
+  justify-content: space-between;
+}
+
+article img {
+  max-width: 100%;
+}
+
+img.go-to {
+  width: 25%;
+}
+
+div.view-details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: thin 1px darkgrey;
+}
+
+p {
+  margin: 0.1rem 0.3rem;
+  padding: 0.3rem 0.4rem;
+}
+
+p.big-digit {
+  font: 3rem bold small-caps darkgrey, 'Lucida Bright', monospace;
+  color: darkgrey;
+  text-align: right;
+}
+
+figcaption {
+  background-color: #312f2f;
+  color: #e0d9d9;
+  font: italic smaller sans-serif;
+  padding: 0.1rem;
+  text-align: center;
+}
+
+table, th, td {
+  border: thin solid darkgray;
+}
+
+table tr {
+  text-align: center;
+}
+
+table .col-group {
+  background-color: darkgray;
+}
+
+footer#global-footer {
+  margin: 1rem;
+  text-align: center;
+}
+
+button#view-alerts {
+  width: 100%;
 }
