--- a/design/default.css
+++ b/design/default.css
@@ -114,6 +114,8 @@ footer#global-footer {
   text-align: center;
 }
 
-button#view-alerts {
+button.view-alerts {
+  display: inline-block;
   width: 100%;
+  border-radius: 0.7rem;
 }
